force-app/main/default/objects/OA_Data_Snapshots__c/OA_Data_Snapshots__c.object-meta.xml
<CustomObject>
    <description>This object is created to capture Monthly Data snapshot of Opportunity. This is only for Reporting requirement and is not used anywhere else</description>
    <label>Data Snapshots</label>
    <nameField>
        <label>Data Snapshots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>