force-app/main/default/objects/OA_Data_Snapshots__c/fields/April_Weighted__c.field-meta.xml
<CustomField>
    <fullName>April_Weighted__c</fullName>
    <formula>April__c *  OA_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>April Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>