force-app/main/default/objects/OA_Data_Snapshots__c/fields/August_Weighted__c.field-meta.xml
<CustomField>
    <fullName>August_Weighted__c</fullName>
    <formula>OA_Probability__c * August__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>August Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>