force-app/main/default/objects/OA_Data_Snapshots__c/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <label>December</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>