force-app/main/default/objects/OA_Data_Snapshots__c/fields/December_Weighted__c.field-meta.xml
<CustomField>
    <fullName>December_Weighted__c</fullName>
    <formula>OA_Probability__c *  December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>December Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>