force-app/main/default/objects/OA_Data_Snapshots__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <label>February</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>