force-app/main/default/objects/OA_Data_Snapshots__c/fields/February_Weighted__c.field-meta.xml
<CustomField>
    <fullName>February_Weighted__c</fullName>
    <formula>February__c *  OA_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>February Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>