force-app/main/default/objects/OA_Data_Snapshots__c/fields/Gross__c.field-meta.xml
<CustomField>
    <fullName>Gross__c</fullName>
    <formula>January__c + February__c+ March__c + April__c+May__c+June__c+July__c+August__c+September__c+October__c+November__c+December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>