force-app/main/default/objects/OA_Data_Snapshots__c/fields/July_Weighted__c.field-meta.xml
<CustomField>
    <fullName>July_Weighted__c</fullName>
    <formula>OA_Probability__c *  July__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>July Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>