force-app/main/default/objects/OA_Data_Snapshots__c/fields/March_Weighted__c.field-meta.xml
<CustomField>
    <fullName>March_Weighted__c</fullName>
    <formula>March__c *  OA_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>March Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>