force-app/main/default/objects/OA_Data_Snapshots__c/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <label>November</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>