force-app/main/default/objects/OA_Data_Snapshots__c/fields/November_Weighted__c.field-meta.xml
<CustomField>
    <fullName>November_Weighted__c</fullName>
    <formula>OA_Probability__c * November__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>November Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>