force-app/main/default/objects/OA_Data_Snapshots__c/fields/OA_Account__c.field-meta.xml
<CustomField>
    <fullName>OA_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Snapshots</relationshipLabel>
    <relationshipName>Data_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>