force-app/main/default/objects/OA_Data_Snapshots__c/fields/OA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>OA_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Data Snapshots</relationshipLabel>
    <relationshipName>Data_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>