force-app/main/default/objects/OA_Data_Snapshots__c/fields/OA_Probability__c.field-meta.xml
<CustomField>
    <fullName>OA_Probability__c</fullName>
    <label>Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>