force-app/main/default/objects/OA_Data_Snapshots__c/fields/OA_Total_Risk_Adjusted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OA_Total_Risk_Adjusted_Revenue__c</fullName>
    <label>Total Risk Adjusted Revenue</label>
    <summarizedField>OA_Monthly_Data_Snapshot__c.OA_Risk_Adjusted_Revenue__c</summarizedField>
    <summaryForeignKey>OA_Monthly_Data_Snapshot__c.OA_Data_Snapshots__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>