force-app/main/default/objects/OA_Data_Snapshots__c/fields/OA_User__c.field-meta.xml
<CustomField>
    <fullName>OA_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Snapshots_User</relationshipName>
    <type>Lookup</type>
</CustomField>