force-app/main/default/objects/OA_Data_Snapshots__c/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <label>October</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>