force-app/main/default/objects/OA_Data_Snapshots__c/fields/October_Weighted__c.field-meta.xml
<CustomField>
    <fullName>October_Weighted__c</fullName>
    <formula>OA_Probability__c *  October__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>October Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>