force-app/main/default/objects/OA_Data_Snapshots__c/fields/Opportunity_Rep__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>