force-app/main/default/objects/OA_Data_Snapshots__c/fields/Risk_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Risk_Adjusted__c</fullName>
    <formula>(January__c + February__c+ March__c + April__c+May__c+June__c+July__c+August__c+September__c+October__c+November__c+December__c ) * OA_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>