force-app/main/default/objects/OA_Data_Snapshots__c/fields/Snapshot_Month__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Month__c</fullName>
    <label>Snapshot Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month</valueSetName>
    </valueSet>
</CustomField>