force-app/main/default/objects/OA_Data_Snapshots__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OA_Year__c</columns>
    <columns>Snapshot_Month__c</columns>
    <columns>OA_Probability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Snapshot_Month__c</field>
        <operation>equals</operation>
        <value>1,2,3,4,5,6</value>
    </filters>
    <filters>
        <field>OA_Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>All</label>
</ListView>